--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="CGBlue">#0081A7</color>
+    <color name="Verdigris">#00AFB9</color>
+    <color name="LightLemon">#FDFCDC</color>
+    <color name="PeachPuff">#FED9B7</color>
+    <color name="Bittersweet">#F07167</color>
 </resources>
