--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="LightLemon">#FDFCDC</color>
     <color name="PeachPuff">#FED9B7</color>
     <color name="Bittersweet">#F07167</color>
+    <color name="lightBittersweet">#F69790</color>
 </resources>
