--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment"
-    android:background="@color/lightBittersweet">
+    android:background="@color/PeachPuff">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="People"
+        android:text="Setting"
         android:textSize="30dp"
         android:textColor="#ffffff"/>
 
