--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -15,10 +15,10 @@
         android:background="@color/colorAccent">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/profileButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Button"
+            android:text="Profile"
             android:textSize="10dp" />
 
         <TextView
