--- a/app/src/main/res/layout/show_friends_list.xml
+++ b/app/src/main/res/layout/show_friends_list.xml
@@ -5,17 +5,17 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
+        >
         <ImageView
             android:id="@+id/friendsProfileImage"
-            android:layout_width="34dp"
-            android:layout_height="44dp"
+            android:layout_width="61dp"
+            android:layout_height="74dp"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"
             android:src="@drawable/ic_home"></ImageView>
 
         <TextView
@@ -23,9 +23,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/friendsProfileImage"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
+            android:layout_marginStart="29dp"
+            android:layout_marginLeft="29dp"
+            android:layout_marginTop="-1dp"
             android:layout_marginRight="10dp"
             android:layout_toEndOf="@+id/friendsProfileImage"
             android:layout_toRightOf="@+id/friendsProfileImage"
@@ -34,5 +34,6 @@
             android:textColor="#000000"
             android:textSize="25dp"
             android:textStyle="bold"></TextView>
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
