--- a/app/src/main/res/layout/activity_change_user_name.xml
+++ b/app/src/main/res/layout/activity_change_user_name.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:hint="username"
+        android:singleLine="true"
         android:id="@+id/userInputNewUserName"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
