--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -23,5 +23,14 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dp"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hang man"
+        android:id="@+id/HangMan_Button"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="150dp"
+        />
+
 
 </RelativeLayout>
