--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,23 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg2"
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="wrap_content"
         android:id="@+id/firstPageSignUpButton"
-        android:layout_centerHorizontal="true"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginBottom="174dp"
+        android:background="@drawable/rounded_button"
         android:text="Sign Up" />
 
     <Button
-        android:layout_width="wrap_content"
         android:id="@+id/firstPageSignInButton"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="400dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="229dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="174dp"
+        android:background="@drawable/rounded_button"
         android:text="Sign In" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="177dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginBottom="293dp"
+        android:text="PLATO"
+        android:textAlignment="center"
+        android:textColor="#CDBEBE"
+        android:textSize="80dp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
