Sign in and sign up ui changed

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg1"
     tools:context=".signinsignup.SignUp">
 
     <RelativeLayout
@@ -53,6 +54,17 @@
         android:enabled="false"
         android:id="@+id/signUpBtn"
         android:text="Sign Up" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:text="Welcome to plato"
+        android:textSize="30dp"
+        android:textStyle="normal" />
 
 
 </RelativeLayout>
