--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg1"
     tools:context=".signinsignup.SignUp">
 
     <RelativeLayout
@@ -45,4 +46,15 @@
         android:textColor="#fff"
         android:id="@+id/signInBtn"
         android:text="Sign In" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:text="Welcome to plato"
+        android:textSize="30dp"
+        android:textStyle="normal" />
 </RelativeLayout>
