--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -14,20 +14,23 @@
         android:layout_alignParentTop="true"
         android:background="@color/colorAccent">
 
-        <Button
-            android:id="@+id/profileButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Profile"
-            android:textSize="10dp" />
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="TextView"
+            android:textSize="30dp"
+            android:textStyle="italic"
             android:textAlignment="center"
             android:textColor="#000000" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image_main_page"
+            android:layout_width="54dp"
+            android:layout_height="41dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/profileBg"/>
 
     </FrameLayout>
 
