--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,23 +11,49 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/X_OButton"
-        android:layout_width="236dp"
-        android:layout_height="wrap_content"
+        android:layout_width="197dp"
+        android:layout_height="178dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="102dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/xobg" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/HangMan_Button"
-        android:layout_width="233dp"
-        android:layout_height="245dp"
+        android:layout_width="199dp"
+        android:layout_height="196dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="283dp"
+        android:layout_marginStart="107dp"
+        android:layout_marginTop="292dp"
         android:src="@drawable/hangmanbg" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/X_OButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="191dp"
+        android:text="XO"
+        android:textAlignment="center"
+        android:textColor="#BC1010"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/HangMan_Button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="210dp"
+        android:layout_marginEnd="138dp"
+        android:text="Hangman"
+        android:textAlignment="center"
+        android:textColor="#BC1010"
+        android:textSize="30dp" />
 
 
 </RelativeLayout>
