--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -30,7 +30,7 @@
             android:layout_height="41dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:src="@drawable/profileBg"/>
+            android:src="@drawable/profilebg1"/>
 
     </FrameLayout>
 
