--- a/app/src/main/res/layout/show_chat_list.xml
+++ b/app/src/main/res/layout/show_chat_list.xml
@@ -7,6 +7,8 @@
         android:id="@+id/relativeL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="8dp"
         android:layout_marginBottom="5dp">
 
         <ImageView
@@ -17,7 +19,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="2dp"
-            android:src="@drawable/ic_home"></ImageView>
+            android:src="@drawable/ic_profile"></ImageView>
 
         <TextView
             android:id="@+id/friendsUserName"
