--- a/app/src/main/res/layout/show_friends_list.xml
+++ b/app/src/main/res/layout/show_friends_list.xml
@@ -7,6 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="8dp"
         >
         <ImageView
             android:id="@+id/friendsProfileImage"
@@ -16,7 +18,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="2dp"
-            android:src="@drawable/ic_home"></ImageView>
+            android:src="@drawable/ic_profile"></ImageView>
 
         <TextView
             android:id="@+id/friendsUserName"
