--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -7,6 +7,7 @@
     tools:context=".HomeFragment"
     android:background="@drawable/fragmentbg">
 
+    <!-- TODO: Update blank fragment layout -->
 
 
     <androidx.recyclerview.widget.RecyclerView
