--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,53 +3,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment"
-    android:background="@drawable/fragmentbg">
-
-    <!-- TODO: Update blank fragment layout -->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".HomeFragment">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/X_OButton"
-        android:layout_width="197dp"
-        android:layout_height="178dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/xobg" />
+<!--    <de.hdodenhof.circleimageview.CircleImageView-->
+<!--        android:id="@+id/X_OButton"-->
+<!--        android:layout_width="197dp"-->
+<!--        android:layout_height="178dp"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:src="@drawable/xobg" />-->
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/HangMan_Button"
-        android:layout_width="199dp"
-        android:layout_height="196dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="292dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/hangmanbg" />
+<!--    <de.hdodenhof.circleimageview.CircleImageView-->
+<!--        android:id="@+id/HangMan_Button"-->
+<!--        android:layout_width="199dp"-->
+<!--        android:layout_height="196dp"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_marginTop="292dp"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:src="@drawable/hangmanbg" />-->
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/X_OButton"
-        android:layout_marginTop="192dp"
-        android:text="XO"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textColor="#BC1010"
-        android:textSize="30dp" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView4"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignTop="@+id/X_OButton"-->
+<!--        android:layout_marginTop="192dp"-->
+<!--        android:text="XO"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="#BC1010"-->
+<!--        android:textSize="30dp" />-->
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/HangMan_Button"
-        android:layout_marginTop="210dp"
-        android:text="Hangman"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textColor="#BC1010"
-        android:textSize="30dp" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView5"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignTop="@+id/HangMan_Button"-->
+<!--        android:layout_marginTop="210dp"-->
+<!--        android:text="Hangman"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="#BC1010"-->
+<!--        android:textSize="30dp" />-->
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_content">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/appbar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+
+            <com.google.android.material.tabs.TabLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/result_tabs"
+                android:background="#ccc"
+                app:tabMinWidth="120dp"
+                app:tabSelectedTextColor="@color/colorPrimary"
+                app:tabIndicator="@color/colorPrimary"
+                app:tabTextColor="#5E5A5A"
+                app:tabMode="scrollable"/>
+        </com.google.android.material.appbar.AppBarLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/viewpager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 
 </RelativeLayout>
