--- a/app/src/main/res/layout/fragment_ranked_fragmant.xml
+++ b/app/src/main/res/layout/fragment_ranked_fragmant.xml
@@ -5,10 +5,29 @@
     android:layout_height="match_parent"
     tools:context=".Games.RankedFragmant">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="this is rank fragment" />
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/rank_start_X_O"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:text="X-O"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/background_button_circle"
+        android:textColor="#fff"
+        />
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/rank_start_hangman"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:text="HANGMAN"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="250dp"
+        android:background="@drawable/background_button_circle"
+        android:textColor="#fff"
+        />
 
 </FrameLayout>
