--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -8,13 +8,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="right"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
     >
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="58dp"
+            android:layout_height="53dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="344dp"
+            android:layout_marginTop="-8dp"
+            android:layout_marginEnd="9dp"
+            android:src="@drawable/profile10" />
 
         <TextView
             android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="72dp"
             android:background="@drawable/background_right"
             android:padding="8dp"
             android:text="سلام خوبی چطوری منم نژاد فرد"
