--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -22,15 +22,15 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="-11dp"
             android:layout_marginEnd="352dp"
-            android:src="@drawable/profile10" />
+            android:src="@drawable/profile" />
 
         <TextView
             android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="68dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginEnd="294dp"
             android:background="@drawable/background_left"
             android:padding="8dp"
             android:text="Hello"
