--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="344dp"
             android:layout_marginTop="-8dp"
             android:layout_marginEnd="9dp"
-            android:src="@drawable/profile10" />
+            android:src="@drawable/profile" />
 
         <TextView
             android:id="@+id/show_message"
