--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -11,7 +11,8 @@
         android:id="@+id/chatMessages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/text_send" />
+        android:layout_above="@+id/text_send"
+        android:stackFromBottom="true"/>
 
     <EditText
         android:id="@+id/text_send"
