--- a/app/src/main/res/layout/fragment_ranked_fragmant.xml
+++ b/app/src/main/res/layout/fragment_ranked_fragmant.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Games.RankedFragmant">
+    tools:context=".Games.RankedFragment">
 
     <Button
         android:layout_width="200dp"
