--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -36,6 +36,16 @@
             android:text="Hello"
             android:textAlignment="inherit"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/timeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/show_message"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="3dp"
+            android:layout_toEndOf="@+id/show_message"
+            android:textSize="10sp" />
     </RelativeLayout>
 
 
