--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -37,5 +37,15 @@
             android:textAlignment="inherit"
             android:textColor="#fff"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/timeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/show_message"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="2dp"
+            android:layout_toStartOf="@+id/show_message"
+            android:textSize="10sp" />
 </RelativeLayout>
 </LinearLayout>
