--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -12,17 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@color/colorAccent">
+        android:background="@color/Verdigris">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="TextView"
-            android:textSize="30dp"
-            android:textStyle="italic"
+            android:textSize="25dp"
+            android:textStyle="bold"
             android:textAlignment="center"
-            android:textColor="#000000" />
+            android:textColor="#F6F4F4" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image_main_page"
@@ -48,6 +48,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"
         app:menu="@menu/menu" />
 </RelativeLayout>
