profile layout fixed

--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -52,12 +52,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:textColor="#fff"
-            android:padding="15dp"
-            android:layout_marginStart="34dp"
-            android:layout_marginTop="244dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="237dp"
             android:background="@drawable/back_ground_button_profile"
-            android:text="Change username" />
+            android:padding="15dp"
+            android:text="Change username"
+            android:textColor="#fff"
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/changePasswordBtn"
@@ -66,15 +67,16 @@
             android:layout_alignTop="@+id/changeUsernameBtn"
             android:layout_alignBottom="@+id/changeUsernameBtn"
             android:layout_alignParentStart="true"
-            android:textColor="#fff"
-            android:background="@drawable/back_ground_button_profile"
             android:layout_alignParentEnd="true"
-            android:padding="15dp"
-            android:layout_marginStart="243dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="29dp"
+            android:layout_marginStart="234dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="38dp"
             android:layout_marginBottom="1dp"
-            android:text="Change password" />
+            android:background="@drawable/back_ground_button_profile"
+            android:padding="15dp"
+            android:text="Change password"
+            android:textSize="10sp"
+            android:textColor="#fff" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/changePhotoFab"
