--- a/app/src/main/res/layout/fragment_casual_game.xml
+++ b/app/src/main/res/layout/fragment_casual_game.xml
@@ -11,4 +11,27 @@
         android:layout_height="match_parent"
         android:text="this is casual fragment" />
 
+    <Button
+        android:id="@+id/rank_start_X_O"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/background_button_circle"
+        android:gravity="center"
+        android:text="X-O"
+        android:textColor="#fff"
+        android:textSize="30dp" />
+
+    <Button
+        android:id="@+id/rank_start_hangman"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="250dp"
+        android:background="@drawable/background_button_circle"
+        android:gravity="center"
+        android:text="HANGMAN"
+        android:textColor="#fff"
+        android:textSize="30dp" />
+
 </FrameLayout>
