--- a/app/src/main/res/layout/showtopplayers.xml
+++ b/app/src/main/res/layout/showtopplayers.xml
@@ -7,7 +7,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="left"
+        android:background="@drawable/formborder"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         >
@@ -21,6 +22,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginStart="1dp"
             android:layout_marginTop="-11dp"
+            android:visibility="gone"
             android:layout_marginEnd="352dp"
             android:src="@drawable/profile" />
 
@@ -28,10 +30,9 @@
             android:id="@+id/playerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="83dp"
+            android:layout_alignStart="@+id/rankTextView"
+            android:layout_marginStart="48dp"
             android:layout_marginLeft="5dp"
-            android:background="@drawable/background_left"
             android:padding="8dp"
             android:text="Hello"
             android:textAlignment="inherit"
@@ -41,8 +42,9 @@
             android:id="@+id/rankTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="0dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:text="Rank : "
             android:textColor="#000000"
             android:textSize="10sp" />
